# kovi-hana

./: .gitignore  Cargo.toml  kovi.conf.toml  kovi.plugin.toml
data/hana/: config.toml  config_deepseek.toml  config_siliconflow.toml
plugins/hana/: Cargo.toml
plugins/hana/src/: agent.rs  command.rs  exception.rs  global_state.rs  group_notice.rs  lib.rs  log.rs  store.rs  util.rs
plugins/hi/: Cargo.toml
plugins/hi/src/: lib.rs
src/: main.rs
