[package]
name = "hana"
version = "0.1.0"
edition = "2021"

[dependencies]
kovi.workspace = true
kovi-plugin-expand-napcat = "0.3.1"
serde = { version = "1", features = ["derive"] }
toml = "0"
thiserror = "2"
serde_json = "1"
reqwest = { version = "0", features = ["json"] }
rand = "0"
indoc = "2"
regex = "1"
sqlx = { version = "0", features = ["runtime-tokio", "sqlite"] }
time = { version = "0", features = ["macros", "formatting"] }